@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
           - simplify creation of ad-hoc author object at build time
           - (hopefully) fix html cell padding issue on metacpan
           - use utf8 pragma, in case some names contain unicode characters
+          - include a bit of background to why I wrote this
 
 0.003     2013-07-05 18:04:20 PDT-0700 (Karen Etheridge)
           - rewrite code and HTML generation by using embedded templates in
